<?xml version="1.0"?>
<package>
  <name>rfsm</name>
  <version>1.0.0</version>
  <description>This package contains the rFSM flavor of Statecharts.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPL</license>
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://people.mech.kuleuven.be/~mklotzbucher/rfsm/README.html</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="markus.klotzbuecher@mech.kuleuven.be">Markus Klotzbuecher</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

</package>
