<?xml version="1.0"?>
<package>
  <name>rfsm</name>
  <version>1.0.2</version>
  <description>This package contains the rFSM flavor of Statecharts.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="mk@mkio.de">Markus Klotzbuecher</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
    <license>BSD-3-Clause</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://github.com/kmarkus/rFSM</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="mk@mkio.de">Markus Klotzbuecher</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

</package>
